@@ -1,11 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.404 2005/10/01 21:38:17 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.405 2005/10/02 21:46:52 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
-  1 Oct 2005; Andrew Gaffney <agafney@gentoo.org>
+  2 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIUtility:
+  removed rot13ify()
+
+  1 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
   allow for param to be passed multiple times in GET
   no XMLRPC functions return None
